Created user model and expense model

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,11 @@
 PORT = "8000"
 
+
+# middleware
+CORS_URL=*
 # JWT
 JWT_SECRET = "mylittlesecret"
 JWT_ALGORITHM = "HS256"
+
+# DB
+MONGODB_URL="DBMS link"
