Update backend controller and middleware and updated login page functionality

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,4 +8,7 @@ JWT_SECRET = "mylittlesecret"
 JWT_ALGORITHM = "HS256"
 
 # DB
-MONGODB_URL="DBMS link"
+MONGODB_URL="mongodb://127.0.0.1:27017"
+
+#PRODUCTION
+debug = 1
