--- a/moneyTrackerFrontend/package.json
+++ b/moneyTrackerFrontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.14",
+    "@mui/x-date-pickers": "^7.1.0",
     "axios": "^1.6.8",
     "d3": "^7.9.0",
     "react": "^18.2.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@mui/styled-engine": "^5.15.14",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -29,6 +31,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.37",
+    "react-hot-toast": "^2.4.1",
     "tailwindcss": "^3.4.1",
     "vite": "^5.2.0"
   }
